@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2006, 2008-2012, 2014 - TortoiseSVN
+// Copyright (C) 2003-2006, 2008-2012, 2014-2015 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -24,7 +24,6 @@ CProgressDlg::CProgressDlg()
     , m_isVisible(false)
     , m_dwDlgFlags(PROGDLG_NORMAL)
     , m_hWndProgDlg(NULL)
-    , m_OrigProc(NULL)
     , m_hWndParent(NULL)
 {
     EnsureValid();
@@ -179,28 +178,6 @@ HRESULT CProgressDlg::ShowModal(HWND hWndParent, BOOL immediately /* = true */)
         hr2 = pOleWindow->GetWindow(&m_hWndProgDlg);
         if(SUCCEEDED(hr2))
         {
-            // StartProgressDialog creates a new thread to host the progress window.
-            // When the window receives WM_DESTROY message StopProgressDialog() wrongly
-            // attempts to re-enable the parent in the calling thread (our thread),
-            // after the progress window is destroyed and the progress thread has died.
-            // When the progress window dies, the system tries to assign a new foreground window.
-            // It cannot assign to hwndParent because StartProgressDialog (w/PROGDLG_MODAL) disabled the parent window.
-            // So the system hands the foreground activation to the next process that wants it in the
-            // system foreground queue. Thus we lose our right to recapture the foreground window.
-            // The way to fix this bug is to insert a call to EnableWindow(hWndParent) in the WM_DESTROY
-            // handler for the progress window in the progress thread.
-
-            // To do that, we Subclass the progress dialog
-            // Since the window and thread created by the progress dialog object live on a few
-            // milliseconds after calling Stop() and Release(), we must not store anything
-            // in member variables of this class but must only store everything in the window
-            // itself: thus we use SetProp()/GetProp() to store the data.
-            if (!m_isVisible)
-            {
-                m_OrigProc = (WNDPROC) SetWindowLongPtr(m_hWndProgDlg, GWLP_WNDPROC, (LONG_PTR) fnSubclass);
-                SetProp(m_hWndProgDlg, L"ParentWindow", m_hWndParent);
-                SetProp(m_hWndProgDlg, L"OrigProc", m_OrigProc);
-            }
             if(immediately)
                 ShowWindow(m_hWndProgDlg, SW_SHOW);
         }
@@ -228,13 +205,6 @@ HRESULT CProgressDlg::ShowModeless(HWND hWndParent, BOOL immediately)
         hr2 = pOleWindow->GetWindow(&m_hWndProgDlg);
         if(SUCCEEDED(hr2))
         {
-            // see comment in ShowModal() for why we subclass the window
-            if (!m_isVisible)
-            {
-                m_OrigProc = (WNDPROC) SetWindowLongPtr(m_hWndProgDlg, GWLP_WNDPROC, (LONG_PTR) fnSubclass);
-                SetProp(m_hWndProgDlg, L"ParentWindow", m_hWndParent);
-                SetProp(m_hWndProgDlg, L"OrigProc", m_OrigProc);
-            }
             if (immediately)
                 ShowWindow(m_hWndProgDlg, SW_SHOW);
         }
@@ -296,7 +266,19 @@ void CProgressDlg::Stop()
             // all messages until there are no more messages: that's when
             // the progress dialog is really gone.
             AttachThreadInput(GetWindowThreadProcessId(m_hWndProgDlg, 0), GetCurrentThreadId(), TRUE);
+            // StartProgressDialog creates a new thread to host the progress window.
+            // When the window receives WM_DESTROY message StopProgressDialog() wrongly
+            // attempts to re-enable the parent in the calling thread (our thread),
+            // after the progress window is destroyed and the progress thread has died.
+            // When the progress window dies, the system tries to assign a new foreground window.
+            // It cannot assign to hwndParent because StartProgressDialog (w/PROGDLG_MODAL) disabled the parent window.
+            // So the system hands the foreground activation to the next process that wants it in the
+            // system foreground queue. Thus we lose our right to recapture the foreground window.
+            // To fix this problem, we enable the parent window and set to focus to it here, after
+            // we've attached to the window thread.
             ShowWindow(m_hWndProgDlg, SW_HIDE);
+            EnableWindow(m_hWndParent, TRUE);
+            SetFocus(m_hWndParent);
             auto start = GetTickCount();
             while (::IsWindow(m_hWndProgDlg) && ((GetTickCount() - start) < 3000))
             {
@@ -320,17 +302,3 @@ void CProgressDlg::ResetTimer()
     }
 }
 
-LRESULT CProgressDlg::fnSubclass(HWND hwnd,UINT uMsg,WPARAM wParam,LPARAM lParam)
-{
-    LONG_PTR origproc = (LONG_PTR)GetProp(hwnd, L"OrigProc");
-    if (uMsg == WM_DESTROY)
-    {
-        HWND hParent = (HWND)GetProp(hwnd, L"ParentWindow");
-        EnableWindow(hParent, TRUE);
-        SetFocus(hParent);
-        SetWindowLongPtr (hwnd, GWLP_WNDPROC, origproc);
-        RemoveProp(hwnd, L"ParentWindow");
-        RemoveProp(hwnd, L"OrigProc");
-    }
-    return CallWindowProc ((WNDPROC)origproc, hwnd, uMsg, wParam, lParam);
-}
